src/test/ui/issues/issue-2XXXX/issue-24682.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-24682.rs:5:11
   |
LL | /           N=
LL | |           Self::N> {
   | |_________________^ associated type not allowed here

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-24682.rs:11:13
   |
LL |            <N=()>
   |             ^^^^ associated type not allowed here

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-24682.rs:15:13
   |
LL |         u32<N=()>
   |             ^^^^ associated type not allowed here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0229`.
